--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,9 +5,7 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
-  <!--[if lt IE 9]>
-    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-  <![endif]-->
+  <%= render 'layouts/shim' %>
 </head>
 <body>
 	<header class="navbar navbar-fixed-top navbar-inverse">
@@ -17,9 +15,9 @@
 			
           <nav>
             <ul class="nav pull-right">
-              <li><%= link_to "Home",    '#' %></li>
-              <li><%= link_to "Help",    '#' %></li>
-              <li><%= link_to "Sign in", '#' %></li>
+              <li><%= link_to "Домой",    '#' %></li>
+              <li><%= link_to "Помощь",    '#' %></li>
+              <li><%= link_to "Вход в личный кабинет", '#' %></li>
             </ul>
           </nav>
         </div>
@@ -29,6 +27,6 @@
 	<div class="container">
       <%= yield %>
     </div>
-
+	<%= render 'layouts/footer' %>
 </body>
 </html>
