--- a/app/views/orders/home.html.erb
+++ b/app/views/orders/home.html.erb
@@ -1,18 +1,14 @@
 <% provide(:title, 'Дом') %>
 <% provide(:rew, 'Дом111') %>
 <!-- <h1> RSnet <%=yield(:rew)%></h1> -->
-<div class="center hero-unit">
-	
-	<h1>Доставим, куда скажете.<br>
+<div class="center hero-unit rent">
+	<h2>Аренда велосипедов в Таллинне</h2>
+	<h5>Доставим, куда скажете.<br>
 			Заберем, где устанете.
-	</h1>
-  <h2>
-    This is the home page for the
-    <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
-    sample application.
-  </h2>
-
+	</h5>
+	<h5>Выберите велосипед</h5>
+  
   <%= link_to "Sign up now!", '#', class: "btn btn-large btn-primary" %>
+  <%= link_to image_tag("Tandem2.png", alt: "КУ-КУ"), '#' %>
 </div>
 
-<%= link_to image_tag("Tandem2.png", alt: "КУ-КУ"), '#' %>
