--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,12 +11,12 @@
 	<header class="navbar navbar-fixed-top navbar-inverse">
       <div class="navbar-inner">
         <div class="container">
-          <%= link_to "Аренда велосипедов в Таллинне", '#', id: "logo" %>
+          <%= link_to "Аренда велосипедов в Таллине", root_path, id: "logo" %>
 			
           <nav>
             <ul class="nav pull-right">
-              <li><%= link_to "Домой",    '#' %></li>
-              <li><%= link_to "Помощь",    '#' %></li>
+              <li><%= link_to "Домой",    root_path %></li>
+              <li><%= link_to "Помощь",   help_path %></li>
               <li><%= link_to "Вход в личный кабинет", '#' %></li>
             </ul>
           </nav>
