--- a/app/views/orders/home.html.erb
+++ b/app/views/orders/home.html.erb
@@ -2,13 +2,13 @@
 <% provide(:rew, 'Дом111') %>
 <!-- <h1> RSnet <%=yield(:rew)%></h1> -->
 <div class="center hero-unit rent">
-	<h2>Аренда велосипедов в Таллинне</h2>
+	<h2>Аренда велосипедов в Таллине</h2>
 	<h5>Доставим, куда скажете.<br>
 			Заберем, где устанете.
 	</h5>
 	<h5>Выберите велосипед</h5>
   
-  <%= link_to "Sign up now!", '#', class: "btn btn-large btn-primary" %>
+  <%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
   <%= link_to image_tag("Tandem2.png", alt: "КУ-КУ"), '#' %>
 </div>
 
