--- a/app/views/layouts/_footer.html
+++ b/app/views/layouts/_footer.html
@@ -7,7 +7,7 @@
     <ul>
       <li><%= link_to "Наши услуги",   about_path %></li>
       <li><%= link_to "О нас", contact_path %></li>
-      <li>Copyright © rentabke.ee</li>
+      <li><a href="#">Новости и АКЦИИ</a></li>
     </ul>
   </nav>
 </footer>
