--- a/app/views/orders/home.html.erb
+++ b/app/views/orders/home.html.erb
@@ -6,20 +6,26 @@
 		Заберем, где устанете.
 	</h2>
   
- 	<h5>Выберите велосипед</h5>
+ 	
   
-  	<br>
+  	
 	<div class="pic center ">
-	<%= link_to image_tag("man_on_the_bike2.png", class: "bike_icon pull-left", alt: "КУ-КУ"), '#' %>
-	<%= link_to image_tag("girl-on-the-bike2.png", class: "bike_icon pull-right", alt: "КУ-КУ"), '#' %>
+	<h3>Выберите велосипед</h3><br>
+	<%= link_to image_tag("man_on_the_bike2.png", class: "bike_icon", alt: "КУ-КУ"), '#' %>
+	<%= link_to image_tag("girl-on-the-bike2.png", class: "bike_icon ", alt: "КУ-КУ"), '#' %>
 	
-	<%= link_to image_tag("boyandgirl1.png", class: "bike_icon pull-left", alt: "КУ-КУ"), '#' %>
-	<%= link_to image_tag("Tandem2.png", class: "bike_icon pull-right", alt: "КУ-КУ"), '#' %>
+	<%= link_to image_tag("boyandgirl1.png", class: "bike_icon ", alt: "КУ-КУ"), '#' %>
+	<%= link_to image_tag("Tandem2.png", class: "bike_icon ", alt: "КУ-КУ"), '#' %>
 	
-	<%= link_to "Забронировать! ", signup_path, class: "btn btn-large btn-primary " %>
+	<!-- <%= link_to "Забронировать! ", signup_path, class: "btn btn-large btn-primary " %> -->
 
+	
+	
+	
+	<h3>Выберите место, где хотите получить велосипед.</h3><br>
+	<%= link_to image_tag("PortPoint_mini.png", class: "bike_icon ", alt: "КУ-КУ"), '#' %>
+	<%= link_to image_tag("TrainPoint_mini.png", class: "bike_icon ", alt: "КУ-КУ"), '#' %>
 	</div>
-  
   
 </div>
 
