--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,27 +7,61 @@
   <%= csrf_meta_tags %>
   <%= render 'layouts/shim' %>
 </head>
-<body>
-	<header class="navbar navbar-fixed-top navbar-inverse">
-      <div class="navbar-inner">
-        <div class="container">
-          <%= link_to "Аренда велосипедов в Таллине", root_path, id: "logo" %>
-			
-          <nav>
-            <ul class="nav pull-right">
-              <li><%= link_to "Домой",    root_path %></li>
-              <li><%= link_to "Помощь",   help_path %></li>
-              <li><%= link_to "Вход в личный кабинет", '#' %></li>
-            </ul>
-          </nav>
-        </div>
-      </div>
-    </header>
+<body cz-shortcut-listen="true">
+<div class="navbar-wrapper">
+    <div class="container">
+
+        <nav class="navbar navbar-inverse navbar-static-top">
+          <div class="container">
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <%= link_to "Аренда велосипедов в Таллине", root_path, class: "navbar-brand logo" %>
+            </div>
+            <div id="navbar" class="navbar-collapse collapse">
+              <ul class="nav navbar-nav">
+                <li class="active"><%= link_to "Домой",    root_path %></li>
+                <li><%= link_to "Наши услуги",   help_path %></li>
+                <li><%= link_to "Вход в личный кабинет", '#' %></li>
+                <li class="dropdown">
+                  <a href="./Carousel Template for Bootstrap_files/Carousel Template for Bootstrap.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                  <ul class="dropdown-menu">
+                    <li><a href="./Carousel Template for Bootstrap_files/Carousel Template for Bootstrap.html">Action</a></li>
+                    <li><a href="./Carousel Template for Bootstrap_files/Carousel Template for Bootstrap.html">Another action</a></li>
+                    <li><a href="./Carousel Template for Bootstrap_files/Carousel Template for Bootstrap.html">Something else here</a></li>
+                    <li role="separator" class="divider"></li>
+                    <li class="dropdown-header">Nav header</li>
+                    <li><a href="./Carousel Template for Bootstrap_files/Carousel Template for Bootstrap.html">Separated link</a></li>
+                    <li><a href="./Carousel Template for Bootstrap_files/Carousel Template for Bootstrap.html">One more separated link</a></li>
+                  </ul>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+
+    </div>
+</div>
 
 	<div class="container">
       <%= yield %>
     </div>
 	<%= render 'layouts/footer' %>
 	<%= debug(params) if Rails.env.development? %>
+	
+	
+	<script src="jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="jquery.min.js"><\/script>')</script>
+    <script src="bootstrap.min.js"></script>	
+	
 </body>
+
+
+	
+
+
 </html>
