--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,9 +54,9 @@
 	<%= debug(params) if Rails.env.development? %>
 	
 	
-	<script src="jquery.min.js"></script>
+	<!-- <script src="jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="jquery.min.js"><\/script>')</script>
-    <script src="bootstrap.min.js"></script>	
+    <script src="bootstrap.min.js"></script>	 -->
 	
 </body>
 
