--- a/app/views/orders/home.html.erb
+++ b/app/views/orders/home.html.erb
@@ -17,15 +17,21 @@
 	<%= link_to image_tag("boyandgirl1.png", class: "bike_icon ", alt: "КУ-КУ"), '#' %>
 	<%= link_to image_tag("Tandem2.png", class: "bike_icon ", alt: "КУ-КУ"), '#' %>
 	
-	<!-- <%= link_to "Забронировать! ", signup_path, class: "btn btn-large btn-primary " %> -->
+	 <%= link_to "Забронировать! ", '#', class: "btn btn-large btn-primary " %>
 
 	
 	
 	
 	<h3>Выберите место, где хотите получить велосипед.</h3><br>
+	<%= link_to image_tag("AirportPoint_mini.png", class: "bike_icon ", alt: "КУ-КУ"), '#' %>
+	<br>
 	<%= link_to image_tag("PortPoint_mini.png", class: "bike_icon ", alt: "КУ-КУ"), '#' %>
 	<%= link_to image_tag("TrainPoint_mini.png", class: "bike_icon ", alt: "КУ-КУ"), '#' %>
+	<br>
+	<h3>Выберите дату и время начала проката</h3><br>
+	<h3>Ваш заказ</h3><br>
+	<h3>Выберите платёжную систему и оплатите.</h3><br>
 	</div>
-  
+	
 </div>
 
