--- a/app/assets/stylesheets/orders.css.scss
+++ b/app/assets/stylesheets/orders.css.scss
@@ -186,12 +186,58 @@ padding: 20px
 	/*background-image: url(/assets/bikemap_960.gif);
 	height: 525px;*/
 	padding:20px;
-	padding-top: 100px;
+	padding-top: 121px;
 	
 }
 
 .red{
 	color:#FF0000;
+}
+
+/* sidebar */
+.row{
+	background-color: rgba(211, 211, 201, 0.3);
+}
+
+aside {
+  section {
+    padding: 10px 0;
+    border-top: 1px solid #eee;
+    &:first-child {
+      border: 0;
+      padding-top: 0;
+    }
+    span {
+      display: block;
+      margin-bottom: 3px;
+      line-height: 1;
+    }
+    h1 {
+      font-size: 1.4em;
+      text-align: left;
+      letter-spacing: -1px;
+      margin-bottom: 3px;
+      margin-top: 0px;
+    }
+  }
+}
+
+.gravatar {
+  float: left;
+  margin-right: 10px;
+}
+
+/* forms */
+
+input, textarea, select, .uneditable-input {
+  border: 1px solid #bbb;
+  width: 100%;
+  margin-bottom: 15px;
+  @include box_sizing;
+}
+
+input {
+  height: auto !important;
 }
 
 /* footer */
