--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,10 +1,17 @@
 <% provide(:title, @user.name) %>
-	<div class="center">
-		
-		<h1>
-			<%= gravatar_for @user %>
-			<%= @user.name %>
-		</h1>
+	
+<div class="center hero-unit rent">
+	<div class="row">
+		<aside class="span4">
+		  <section>
+			<h1>
+				<%= gravatar_for @user %>
+				<%= @user.name %>
+				<br><%= @user.email %>
+			</h1>
+		  </section>
+		</aside> 
 	</div>
 	
-	<%= @user.name %>, <%= @user.email %>
+	
+</div>
