--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
   <%= render 'layouts/shim' %>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body cz-shortcut-listen="true">
 <div class="navbar-wrapper">
@@ -48,6 +49,7 @@
 </div>
 
 	<div class="container">
+	 
       <%= yield %>
     </div>
 	<%= render 'layouts/footer' %>
