--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,9 +2,9 @@
 <div class="center hero-unit rent">
 	<h1>Зарегистрировать пользователя</h1>
 	<div class="row">
-		<div class="span6 offset3">
+		<div class="col-xs-6 col-xs-offset-3">
 			
-			<%= form_for(@user) do |f| %>
+			<%= form_for(@user, :html => {class: 'form-horizontal'}) do |f| %>
 				<%= render 'shared/error_messages' %>
 
 				<%= f.label :name %>
