--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <div class="container">
 
         <nav class="navbar navbar-inverse navbar-static-top">
-          <div class="container">
+          <div class="container-fluid">
             <div class="navbar-header">
               <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                 <span class="sr-only">Toggle navigation</span>
@@ -24,22 +24,31 @@
               <%= link_to "Аренда велосипедов в Таллине", root_path, class: "navbar-brand logo" %>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
-              <ul class="nav navbar-nav">
-                <li class="active"><%= link_to "Домой",    root_path %></li>
-                <li><%= link_to "Наши услуги",   help_path %></li>
-                <li><%= link_to "Вход в личный кабинет", '#' %></li>
-                <li class="dropdown">
-                  <a href="./Carousel Template for Bootstrap_files/Carousel Template for Bootstrap.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                  <ul class="dropdown-menu">
-                    <li><a href="./Carousel Template for Bootstrap_files/Carousel Template for Bootstrap.html">Action</a></li>
-                    <li><a href="./Carousel Template for Bootstrap_files/Carousel Template for Bootstrap.html">Another action</a></li>
-                    <li><a href="./Carousel Template for Bootstrap_files/Carousel Template for Bootstrap.html">Something else here</a></li>
-                    <li role="separator" class="divider"></li>
-                    <li class="dropdown-header">Nav header</li>
-                    <li><a href="./Carousel Template for Bootstrap_files/Carousel Template for Bootstrap.html">Separated link</a></li>
-                    <li><a href="./Carousel Template for Bootstrap_files/Carousel Template for Bootstrap.html">One more separated link</a></li>
-                  </ul>
-                </li>
+              <ul class="nav navbar-nav navbar-right">
+                <li class="active"><%= link_to "Home",    root_path %></li>
+                <li><%= link_to "Bykes",   '#' %></li>
+				
+				<% if signed_in? %>
+				
+					<li><%= link_to "Users", '#' %></li>
+					<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Account <b class="caret"></b></a>
+						<ul class="dropdown-menu">
+							<li><%= link_to "Profile", current_user %></li>
+							<li><%= link_to "Settings", '#' %></li>
+						
+							<li role="separator" class="divider"></li>
+							
+							<li><%= link_to "Sign out", signout_path, method: "delete" %></li>
+						</ul>
+					</li>
+				
+				<% else %>
+				
+					<li><%= link_to "Вход в личный кабинет", signin_path %></li>
+				
+				<% end %>
+				
               </ul>
             </div>
           </div>
@@ -49,8 +58,9 @@
 </div>
 
 	<div class="container">
-	 
-      <%= yield %>
+		
+			<%= yield %>
+		
     </div>
 	<%= render 'layouts/footer' %>
 	<%= debug(params) if Rails.env.development? %>
