--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,7 +5,7 @@
 		<aside class="col-sm-4">
 		  <section>
 			<% flash.each do |key, value| %>
-				<div class="alert alert-<%= key %>"><%= value %></div>
+				<%= content_tag(:div, value, class: "alert alert-#{key}") %>
 			<% end %>
 			<h1>
 				<%= gravatar_for @user %>
